<package>
  <name>chris_create_flexible_navigation</name>
  <version>0.1.0</version>
  <description>
    Meta-package for CNU Robotics CHRISLab iRobot Create specific Flexible Navigation System
  </description>
  <author>David Conner</author>
  <maintainer email="david.conner@cnu.edu">David Conner</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/CNURobotics/chris_ros_turtlebot/issues</url>
  <url type="repository">https://github.com/CNURobotics/chris_ros_turtlebot</url>
  <url type="website">https://github.com/CNURobotics/chris_ros_turtlebot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>flex_nav_create_flexbe_states</run_depend>
  <run_depend>flex_nav_create_flexbe_behaviors</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
