<package>
  <name>flex_nav_create_flexbe_behaviors</name>
  <version>1.0.0</version>
  <description>
     Behaviors related to demonstration of flexible_navigation system using CHRISLab iRobot Create
  </description>
  <maintainer email="david.conner@cnu.edu">David Conner</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flex_nav_create_flexbe_states</run_depend>
  <run_depend>flex_nav_create_behaviors</run_depend>

  <export>
      <flexbe_behaviors />
  </export>

</package>
