<package>
  <name>behavior_flex_planner</name>
  <version>1.0.0</version>
  <description>
     Controlls the robot using FlexBE
  </description>
  <author email="justin.willis.13@cnu.edu">Justin Willis</author>
  <maintainer email="david.conner@cnu.edu">Dr. David Conner</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/behavior_flex_planner</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>

</package>
