<package>
  <name>behavior_move_base</name>
  <version>1.0.0</version>
  <description>
     A drop in replacement for move_base
  </description>
  <author email="justin.willis.13@cnu.edu">Justin Willis</author>
  <maintainer email="david.conner@cnu.edu">Dr. David Conner</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/behavior_move_base</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flex_nav_flexbe_states</run_depend>
  <run_depend>flex_nav_create_flexbe_states</run_depend>

</package>
